2010-11-15  Werner Koch  <wk@g10code.com>

	* gpgcedev.c (GPG_Init): Read debug settings.

	* gpgcemgr.c (enable_debug, enable_log): New.
	(main): Add options --enable-debug, --disable-debug, --enable-log,
	--disable-log.

2010-11-12  Werner Koch  <wk@g10code.com>

	* gpgcedev.c (DEVCTX_VALUE): Rename to PIPECTX_VALUE.
	(LOGCTX_VALUE): New.
	(allocate_opnctx): Add arg IS_LOG.
	(logimpl_t): New.
	(openctx_t): Add field IS_LOG.
	(struct logcontrol): New.
	(enable_debug, enable_logging): New.
	(log_debug): Make use of the ENABLE_DEBUG flag.
	(create_log_id): New.
	(logimpl_new, logimpl_unref, logimpl_flush, assert_logimpl): New.
	(GPG_Init): Check for GPG2 device.
	(GPG_Deinit): Close log stream.
	(GPG_Open): Implement log device.
	(GPG_Read): Return EOF for the GPG2 device
	(GPG_Write): Implement GPG2 device.
	(dllmain): Init logcontrol CS.

2010-11-01  Werner Koch  <wk@g10code.com>

	* assuan-socket.c (_assuan_sock_bind): Replace open/fdopen by
	CreateFile for building with MSC for W32CE.
	(utf8_to_wchar, MyCreateFile, MyDeleteFile) [W32CE]: New.

2010-11-01  Marcus Brinkmann  <marcus@g10code.de>

	* assuan-socket.c, assuan-uds.c, system.c, assuan-pipe-server.c,
	assuan-pipe-connect.c [!HAVE_FCNTL_H]: Don't include fcntl.h.
	* assuan-buffer.c [!HAVE_W32CE_SYSTEM]: Do not include process.h.
	* assuan-socket.c [!HAVE_W32CE_SYSTEM]: Do not include io.h.
	* w32-includes.inc.h: Include winsock2.h before ws2tcpip.h.
	* sysutils.c (w32_read_registry): Replace goto label "leave" by
	"out" (as leave is defined by some Windows header file).
	* assuan-inquire.c: Likewise.

2010-11-01  Werner Koch  <wk@g10code.com>

	* assuan-socket.c (S_IRUSR) [W32]: Define if not defined.

	* sysutils.c: Remove include of devload.h.

	* assuan-defs.h [HAVE_WINSOCK2_H]: Include winsock2.h prior to
	windows.h.
	* assuan-pipe-server.c: Ditto.
	* sysutils.c: Ditto.
	* assuan-socket-server.c: Ditto.
	* assuan-pipe-connect.c: Ditto.
	* assuan-socket-connect.c: Ditto.
	* assuan-uds.c: Ditto.